# time2do

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  libtool  time2do.desktop  time2do.glade  time2do.gladep  time2do.prj  time2do.pws
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/.svn/: entries
autom4te.cache/.svn/text-base/: output.0.svn-base
pixmaps/: Makefile
pixmaps/.svn/: all-wcprops  entries
pixmaps/.svn/text-base/: Makefile.am.svn-base
po/: Makefile.in  POTFILES
po/.svn/: all-wcprops  entries
src/: Makefile.am  Makefile.in
src/.deps/.svn/: all-wcprops
src/.deps/.svn/text-base/: interface.P.svn-base  main.P.svn-base  support.P.svn-base
src/.libs/.svn/: entries
src/.svn/: all-wcprops  entries
src/.svn/text-base/: callbacks.c.svn-base  interface.h.svn-base
time2do/: ChangeLog  aclocal.m4  config.status  libtool
time2do/.svn/: all-wcprops  entries
time2do/.svn/text-base/: Makefile.svn-base  TODO.svn-base  config.h.svn-base  configure.in.svn-base
time2do/autom4te.cache/: traces.0
time2do/autom4te.cache/.svn/: all-wcprops
time2do/pixmaps/: Makefile.in
time2do/po/: Makefile
time2do/src/: Makefile
time2do/src/.deps/.svn/: entries
time2do/src/.deps/.svn/text-base/: callbacks.P.svn-base
time2do/src/.libs/.svn/: all-wcprops
time2do/src/.svn/text-base/: interface.c.svn-base  main.c.svn-base  time2do.svn-base  time2go.svn-base
